...
                label: Text(
                  'Start Date',
                ),
              ),
              DataColumn(
                label: Text(
                  'Price From',
                ),
              ),
              DataColumn(
                label: Text(
                  'Price To',
                ),
              ),
              DataColumn(
                label: Text(
                  'Actions',
                ),
...
                  cells: <DataCell>[
                    DataCell(
                      Builder(builder: (context) {
                        if (counterStore.role == UserRole.doctor) {
                          if (counterStore.dutySlots[index].status == DutyStatus.open) {
                            return ElevatedButton(
                              key: Key('assignButton'),
                              onPressed: () {
                                print('Accept action on value: ${counterStore.dutySlots[index]}');
                                counterStore.assignDutySlot(counterStore.dutySlots[index].id);
                              },
                              child: Text('Assign'),
                            );
                          } else if (counterStore.dutySlots[index].status == DutyStatus.pending) {
                            return const ElevatedButton(
                              onPressed: null,
                              child: Text('Waiting for Consent'),
                            );
                          } else if (counterStore.dutySlots[index].status == DutyStatus.filled) {
                            return ElevatedButton(
                              key: Key('revokeButton'),
                              onPressed: () {
                                print('Revoke action on value: ${counterStore.dutySlots[index]}');
                                counterStore.revokeAssignment(counterStore.dutySlots[index].id);
                              },
                              child: Text('Revoke'),
                            );
                          }
                        } else if (counterStore.role == UserRole.hospital) {
                          if (counterStore.dutySlots[index].status == DutyStatus.open) {
                            if (counterStore.userId == int.parse(counterStore.dutySlots[index].hospitalId.id)) {
                              return ElevatedButton(
                                onPressed: () {
                                  print('Delete action on value: ${counterStore.dutySlots[index].id}');
                                  counterStore.deleteDutySlot(counterStore.dutySlots[index].id);
                                },
                                child: Text('Delete'),
                              );
                            } else {
                              return const ElevatedButton(
                                onPressed: null,
                                child: Text('Waiting'),
                              );
                            }
                          } else if (counterStore.dutySlots[index].status == DutyStatus.pending) {
                            return ElevatedButton(
                              key: Key('consentButton'),
                              onPressed: () {
                                print('Consent action on value: ${counterStore.dutySlots[index]}');
                                counterStore.giveConsent(counterStore.dutySlots[index].id);
                              },
                              child: Text('Consent'),
                            );
                          } else if (counterStore.dutySlots[index].status == DutyStatus.filled) {
                            return const ElevatedButton(
                              onPressed: null,
                              child: Text('Filled'),
                            );
                          }
                        }
                        return const SizedBox.shrink(); // Return an empty widget if none of the conditions are met
                      }),
                    ),
...
                        }
                      },
                      itemBuilder: (BuildContext context) {
                        if (counterStore.role == UserRole.hospital) {
                          return <PopupMenuEntry<String>>[
                            const PopupMenuItem<String>(
                              key: Key('deleteMenuItem'),
                              value: 'Delete',
                              child: Text('Delete'),
                            ),
                          ];
                        } else {
                          assert(counterStore.role == UserRole.doctor);
...
