...

    final Map<Page, Widget> _widgetOptions = {
      Page.register: RegisterForm(key: const Key('registerForm'), onTap: () => _onItemTapped(Page.login)),
      Page.login: LoginForm(key: const Key('loginForm'), onTap: () => _onItemTapped(Page.nic)),
      Page.showUsers: ShowUsernamesBody(),
      Page.nic: const Text('NIC', style: optionStyle),
      Page.logout: const Text('Logout'), // This is a placeholder for the logout screen
      Page.getUserData: UserDataForm(),
      Page.deleteMe: const Text('Delete Me'), // This is a placeholder for the delete me screen
      Page.publishDutySlot:
          PublishDutySlotScreen(key: const Key('publishDutySlotScreen'), onTap: () => _onItemTapped(Page.dutySlots)),
      Page.dutySlots: DutySlotsBody(),
      Page.quitApp: const Text('Quit App'), // This is a placeholder
    };

...
                WidgetsBinding.instance!.addPostFrameCallback((_) {
                  print('Hiding current SnackBar');
                  ScaffoldMessenger.of(context).hideCurrentSnackBar();
                });
              }

              return Text(counterStore.username == null ? 'Not logged in' : 'Logged in as ${counterStore.username}');
            },
          ),
          leading: Builder(builder: (context) {
            return IconButton(
              icon: const Icon(Icons.menu),
              onPressed: () {
...
              decoration: BoxDecoration(
                color: Colors.blue,
              ),
              child: Text('Drawer Header'),
            ),
            ListTile(
              title: Text('Register'),
              selected: _selectedPage == Page.register,
              onTap: () {
                _onItemTapped(Page.register);
                Navigator.pop(context);
              },
            ),
            ListTile(
              key: Key('drawerLogin'),
              title: const Text('Login'),
              selected: _selectedPage == Page.login,
              onTap: () {
                _onItemTapped(Page.login);
                Navigator.pop(context);
              },
            ),
            ListTile(
              title: const Text('Show Users'),
              selected: _selectedPage == Page.showUsers,
              onTap: () {
                _onItemTapped(Page.showUsers);
                Navigator.pop(context);
              },
            ),
...
                _onItemTapped(Page.deleteMe);

                Status value = await counterStore.deleteMe();
              },
            ),
            ListTile(
              title: const Text('Publish Duty Slot'),
              key: const Key('drawerPublishDutySlot'),
              selected: _selectedPage == Page.publishDutySlot,
              onTap: () {
                _onItemTapped(Page.publishDutySlot);
                Navigator.pop(context);
              },
            ),
            ListTile(
              title: const Text('Duty Slots'),
              selected: _selectedPage == Page.dutySlots,
              onTap: () {
                _onItemTapped(Page.dutySlots);
                Navigator.pop(context);
              },
            ),
...
